--- a/style.css
+++ b/style.css
@@ -20,9 +20,9 @@
   border: 2px solid black;
   border-radius: 10px;
 }
-.recipe-container {
+.recipe-section {
   width: 100%;
-  height: 50%;
+  height: auto;
   background-color: beige;
   text-align: center;
   margin: 50px;
