--- a/style.css
+++ b/style.css
@@ -56,11 +56,14 @@ textarea {
   width: 100%;
 }
 button {
-  margin-top: 20px;
   height: 35px;
   width: 150px;
   background-color: brown;
   color: white;
   cursor: pointer;
+  border-radius: 10px;
+}
+.delete {
   border-radius: 5px;
+  border: none;
 }
